Fix for subnav links on IE7

--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -3511,6 +3511,10 @@ li.news_feed_item_hovering a.trash {
   font-size: 13px;
   width:100%;
 }
+#page_subnav li a {
+  width:100%;
+  float: left;
+}
 #subnav li.right_subnav_link {
 	float: right;
 }
